Fix/schedule algorithm (#14)
* Add validation for task creation dates and enhance schedule overlap resolution

* Enhance schedule entry placement logic with two-phase scheduling for fixed and flexible entries