@@ -57,9 +57,13 @@ public class ScheduleService {
     public ScheduleResponse getSchedule(UUID userId, LocalDate from, LocalDate to) {
         // Load real ScheduleEntries (ONE_TIME)
         List<ScheduleEntry> realEntries = scheduleEntryRepository.findByUserIdAndEntryDateBetween(userId, from, to);
-        List<de.goaldone.backend.model.ScheduleEntry> result = realEntries.stream()
-                .map(this::toScheduleEntryDto)
-                .collect(Collectors.toList());
+        // Map to group entries by date for overlap resolution
+        Map<LocalDate, List<de.goaldone.backend.model.ScheduleEntry>> entriesByDate = new HashMap<>();
+
+        // Add real entries to the map
+        for (de.goaldone.backend.model.ScheduleEntry entry : realEntries.stream().map(this::toScheduleEntryDto).toList()) {
+            entriesByDate.computeIfAbsent(entry.getDate(), k -> new ArrayList<>()).add(entry);
+        }
 
         // Load RecurringTemplates and build virtual entries (RECURRING) on-the-fly
         List<RecurringTemplate> templates = recurringTemplateRepository.findByOwnerIdAndOrganizationId(
@@ -78,6 +82,12 @@ public class ScheduleService {
 
         for (RecurringTemplate template : templates) {
             for (LocalDate day = from; !day.isAfter(to); day = day.plusDays(1)) {
+                // Skip non-workdays
+                Optional<WorkingHourEntry> optWorkDay = getWorkingHourEntry(workingHours, day.getDayOfWeek());
+                if (optWorkDay.isEmpty() || !optWorkDay.get().isWorkDay()) {
+                    continue;
+                }
+
                 if (!recurrenceMatchesDay(template.getRecurrenceType(), template.getRecurrenceInterval(),
                         template.getCreatedAt().toLocalDate(), day)) {
                     continue;
@@ -92,10 +102,10 @@ public class ScheduleService {
                 }
 
                 LocalDate displayDate = day;
+                WorkingHourEntry workDay = optWorkDay.get();
                 LocalTime displayStart = template.getPreferredStartTime();
                 if (displayStart == null) {
-                    Optional<WorkingHourEntry> optWorkDay = getWorkingHourEntry(workingHours, day.getDayOfWeek());
-                    displayStart = optWorkDay.map(WorkingHourEntry::getStartTime).orElse(LocalTime.of(9, 0));
+                    displayStart = workDay.getStartTime();
                 }
 
                 // Handle rescheduled
@@ -110,6 +120,7 @@ public class ScheduleService {
                 dto.setSource(de.goaldone.backend.model.ScheduleEntry.SourceEnum.RECURRING);
                 dto.setTemplateId(org.openapitools.jackson.nullable.JsonNullable.of(template.getId()));
                 dto.setTemplateTitle(org.openapitools.jackson.nullable.JsonNullable.of(template.getTitle()));
+                dto.setTaskTitle(org.openapitools.jackson.nullable.JsonNullable.of(template.getTitle())); // Convenience field
                 dto.setOccurrenceDate(org.openapitools.jackson.nullable.JsonNullable.of(day));
                 dto.setDate(displayDate);
                 dto.setStartTime(displayStart.toString());
@@ -118,11 +129,119 @@ public class ScheduleService {
                 dto.setIsCompleted(ex != null && ex.getType() == RecurringExceptionType.COMPLETED);
                 dto.setIsPinned(ex != null && ex.getType() == RecurringExceptionType.PINNED);
 
-                result.add(dto);
+                entriesByDate.computeIfAbsent(displayDate, k -> new ArrayList<>()).add(dto);
             }
         }
 
-        // Sort by date and startTime
+        // Resolve overlaps per day
+        List<de.goaldone.backend.model.ScheduleEntry> result = new ArrayList<>();
+        for (Map.Entry<LocalDate, List<de.goaldone.backend.model.ScheduleEntry>> entry : entriesByDate.entrySet()) {
+            LocalDate day = entry.getKey();
+            List<de.goaldone.backend.model.ScheduleEntry> dayEntries = entry.getValue();
+
+            // Split into fixed (has preferredStartTime or is ONE_TIME) and flexible (no preferredStartTime)
+            // Note: templates with preferredStartTime or rescheduled exceptions are fixed.
+            // Templates without preferredStartTime that are NOT rescheduled are flexible.
+            List<de.goaldone.backend.model.ScheduleEntry> fixed = new ArrayList<>();
+            List<de.goaldone.backend.model.ScheduleEntry> flexible = new ArrayList<>();
+
+            for (de.goaldone.backend.model.ScheduleEntry e : dayEntries) {
+                boolean isFlexible = false;
+                if (e.getSource() == de.goaldone.backend.model.ScheduleEntry.SourceEnum.RECURRING) {
+                    UUID templateId = e.getTemplateId().get();
+                    RecurringTemplate t = templates.stream().filter(temp -> temp.getId().equals(templateId)).findFirst().orElse(null);
+                    String key = templateId + "_" + e.getOccurrenceDate().get();
+                    RecurringException ex = exceptionsMap.get(key);
+                    
+                    // Flexible if template has no preferred start time AND no rescheduled exception
+                    if (t != null && t.getPreferredStartTime() == null) {
+                        if (ex == null || ex.getType() != RecurringExceptionType.RESCHEDULED) {
+                            isFlexible = true;
+                        }
+                    }
+                }
+                
+                if (isFlexible) {
+                    flexible.add(e);
+                } else {
+                    fixed.add(e);
+                }
+            }
+
+            // Phase 1: Place fixed entries and resolve overlaps among them
+            fixed.sort(Comparator.comparing(e -> LocalTime.parse(e.getStartTime())));
+            List<de.goaldone.backend.model.ScheduleEntry> placed = new ArrayList<>();
+            LocalTime currentFreeTime = null;
+            for (de.goaldone.backend.model.ScheduleEntry item : fixed) {
+                LocalTime itemStart = LocalTime.parse(item.getStartTime());
+                LocalTime itemEnd = LocalTime.parse(item.getEndTime());
+                int duration = (int) ChronoUnit.MINUTES.between(itemStart, itemEnd);
+
+                if (currentFreeTime != null && itemStart.isBefore(currentFreeTime)) {
+                    itemStart = currentFreeTime;
+                    itemEnd = itemStart.plusMinutes(duration);
+                    item.setStartTime(itemStart.toString());
+                    item.setEndTime(itemEnd.toString());
+                }
+                currentFreeTime = itemEnd;
+                placed.add(item);
+            }
+
+            // Phase 2: Place flexible entries into gaps
+            WorkingHourEntry workDay = getWorkingHourEntry(workingHours, day.getDayOfWeek()).get();
+            LocalTime workdayStart = workDay.getStartTime();
+            LocalTime workdayEnd = workDay.getEndTime();
+
+            for (de.goaldone.backend.model.ScheduleEntry flex : flexible) {
+                int duration = (int) ChronoUnit.MINUTES.between(LocalTime.parse(flex.getStartTime()), LocalTime.parse(flex.getEndTime()));
+                
+                // Find first gap large enough
+                LocalTime searchStart = workdayStart;
+                boolean found = false;
+                
+                while (!found && !searchStart.plusMinutes(duration).isAfter(workdayEnd)) {
+                    LocalTime gapEnd = searchStart.plusMinutes(duration);
+                    final LocalTime finalSearchStart = searchStart;
+                    final LocalTime finalGapEnd = gapEnd;
+                    
+                    // Check if gap overlaps with any already placed entry
+                    boolean overlaps = placed.stream().anyMatch(p -> {
+                        LocalTime pStart = LocalTime.parse(p.getStartTime());
+                        LocalTime pEnd = LocalTime.parse(p.getEndTime());
+                        return finalSearchStart.isBefore(pEnd) && finalGapEnd.isAfter(pStart);
+                    });
+                    
+                    if (!overlaps) {
+                        flex.setStartTime(searchStart.toString());
+                        flex.setEndTime(gapEnd.toString());
+                        placed.add(flex);
+                        // Re-sort to keep search logic simple
+                        placed.sort(Comparator.comparing(e -> LocalTime.parse(e.getStartTime())));
+                        found = true;
+                    } else {
+                        // Move searchStart to the end of the first overlapping entry to find next gap
+                        LocalTime nextPotential = placed.stream()
+                            .filter(p -> LocalTime.parse(p.getStartTime()).isBefore(finalGapEnd) && LocalTime.parse(p.getEndTime()).isAfter(finalSearchStart))
+                            .map(p -> LocalTime.parse(p.getEndTime()))
+                            .max(Comparator.naturalOrder())
+                            .orElse(searchStart.plusMinutes(1));
+                        searchStart = nextPotential;
+                    }
+                }
+                
+                if (!found) {
+                    // If no gap found, append to the end and shift (it will probably go beyond workdayEnd)
+                    LocalTime lastEnd = placed.isEmpty() ? workdayStart : placed.stream().map(p -> LocalTime.parse(p.getEndTime())).max(Comparator.naturalOrder()).get();
+                    flex.setStartTime(lastEnd.toString());
+                    flex.setEndTime(lastEnd.plusMinutes(duration).toString());
+                    placed.add(flex);
+                    placed.sort(Comparator.comparing(e -> LocalTime.parse(e.getStartTime())));
+                }
+            }
+            result.addAll(placed);
+        }
+
+        // Final sort for the whole range
         result.sort(Comparator.comparing(de.goaldone.backend.model.ScheduleEntry::getDate)
                 .thenComparing(e -> LocalTime.parse(e.getStartTime())));
 
@@ -168,65 +287,141 @@ public class ScheduleService {
         scheduleEntryRepository.deleteByUserIdAndEntryDateGreaterThanEqualAndIsCompletedFalseAndIsPinnedFalse(userId, from);
         scheduleEntryRepository.flush();
 
-        // 2b. Blocker-Map aufbauen: Map<LocalDate, Integer> blockerMinutes
-        Map<LocalDate, Integer> blockerMinutes = new HashMap<>();
+        // 2b. Sammle alle Blocker pro Tag (Completed, Pinned, Breaks, Recurring)
+        Map<LocalDate, List<BlockerItem>> dailyBlockers = new HashMap<>();
         LocalDate recurringWindowEnd = from.plusDays(28);
 
-        // Completed Entries als Blocker
-        List<ScheduleEntry> completedEntries = scheduleEntryRepository
-                .findByUserIdAndEntryDateGreaterThanEqualAndIsCompletedTrue(userId, from);
-        for (ScheduleEntry e : completedEntries) {
-            int duration = (int) ChronoUnit.MINUTES.between(e.getStartTime(), e.getEndTime());
-            blockerMinutes.merge(e.getEntryDate(), duration, Integer::sum);
-        }
+        // Completed Entries als Blocker (Fixed)
+        scheduleEntryRepository.findByUserIdAndEntryDateGreaterThanEqualAndIsCompletedTrue(userId, from)
+                .forEach(e -> dailyBlockers.computeIfAbsent(e.getEntryDate(), k -> new ArrayList<>())
+                        .add(new BlockerItem(e.getStartTime(), (int) ChronoUnit.MINUTES.between(e.getStartTime(), e.getEndTime()), false)));
 
-        // Pinned Entries als Blocker
-        List<ScheduleEntry> pinnedEntries = scheduleEntryRepository
-                .findByUserIdAndEntryDateGreaterThanEqualAndIsPinnedTrue(userId, from);
-        for (ScheduleEntry e : pinnedEntries) {
-            int duration = (int) ChronoUnit.MINUTES.between(e.getStartTime(), e.getEndTime());
-            blockerMinutes.merge(e.getEntryDate(), duration, Integer::sum);
-        }
+        // Pinned Entries als Blocker (Fixed)
+        scheduleEntryRepository.findByUserIdAndEntryDateGreaterThanEqualAndIsPinnedTrue(userId, from)
+                .forEach(e -> dailyBlockers.computeIfAbsent(e.getEntryDate(), k -> new ArrayList<>())
+                        .add(new BlockerItem(e.getStartTime(), (int) ChronoUnit.MINUTES.between(e.getStartTime(), e.getEndTime()), false)));
 
-        // 2c. Breaks als Blocker
+        // 2c. Breaks als Blocker (Fixed)
         List<Break> userBreaks = breakRepository.findByUserId(userId);
         for (Break b : userBreaks) {
             int breakDuration = (int) ChronoUnit.MINUTES.between(b.getStartTime(), b.getEndTime());
             for (LocalDate day = from; !day.isAfter(recurringWindowEnd); day = day.plusDays(1)) {
                 if (BreakService.breaksBlocksDay(b, day)) {
-                    blockerMinutes.merge(day, breakDuration, Integer::sum);
+                    dailyBlockers.computeIfAbsent(day, k -> new ArrayList<>())
+                            .add(new BlockerItem(b.getStartTime(), breakDuration, false));
                 }
             }
         }
 
         // 2d. RecurringTemplates als Blocker (28-Tage-Fenster)
-        List<RecurringTemplate> userTemplates = recurringTemplateRepository
-                .findByOwnerIdAndOrganizationId(userId, orgId);
-        List<UUID> templateIds = userTemplates.stream()
-                .map(RecurringTemplate::getId).collect(Collectors.toList());
-
+        List<RecurringTemplate> userTemplates = recurringTemplateRepository.findByOwnerIdAndOrganizationId(userId, orgId);
+        List<UUID> templateIds = userTemplates.stream().map(RecurringTemplate::getId).collect(Collectors.toList());
         final Map<String, RecurringException> exceptionsMap = new HashMap<>();
         if (!templateIds.isEmpty()) {
-            recurringExceptionRepository
-                    .findByTemplateIdInAndOccurrenceDateBetween(templateIds, from, recurringWindowEnd)
-                    .forEach(ex -> exceptionsMap.put(
-                            ex.getTemplate().getId() + "_" + ex.getOccurrenceDate(), ex));
+            recurringExceptionRepository.findByTemplateIdInAndOccurrenceDateBetween(templateIds, from, recurringWindowEnd)
+                    .forEach(ex -> exceptionsMap.put(ex.getTemplate().getId() + "_" + ex.getOccurrenceDate(), ex));
         }
 
         for (RecurringTemplate t : userTemplates) {
             for (LocalDate day = from; !day.isAfter(recurringWindowEnd); day = day.plusDays(1)) {
-                if (!recurrenceMatchesDay(t.getRecurrenceType(), t.getRecurrenceInterval(),
-                        t.getCreatedAt().toLocalDate(), day)) {
-                    continue;
-                }
+                // Skip non-workdays
+                Optional<WorkingHourEntry> optWorkDay = getWorkingHourEntry(workingHours, day.getDayOfWeek());
+                if (optWorkDay.isEmpty() || !optWorkDay.get().isWorkDay()) continue;
+
+                if (!recurrenceMatchesDay(t.getRecurrenceType(), t.getRecurrenceInterval(), t.getCreatedAt().toLocalDate(), day)) continue;
+                
                 String key = t.getId() + "_" + day;
                 RecurringException ex = exceptionsMap.get(key);
-                // Kein Budgetabzug wenn SKIPPED
-                if (ex != null && ex.getType() == RecurringExceptionType.SKIPPED) {
-                    continue;
+                if (ex != null && ex.getType() == RecurringExceptionType.SKIPPED) continue;
+
+                LocalTime start = t.getPreferredStartTime();
+                boolean isFlexible = (start == null);
+                if (start == null) start = optWorkDay.get().getStartTime();
+                
+                if (ex != null && ex.getType() == RecurringExceptionType.RESCHEDULED) {
+                    if (ex.getNewStartTime() != null) start = ex.getNewStartTime();
+                    isFlexible = false; // Rescheduled is fixed
                 }
-                blockerMinutes.merge(day, t.getDurationMinutes(), Integer::sum);
+                dailyBlockers.computeIfAbsent(day, k -> new ArrayList<>()).add(new BlockerItem(start, t.getDurationMinutes(), isFlexible));
             }
+        }
+
+        // Berechne blockerMinutes Map durch Zwei-Phasen-Einplanung
+        Map<LocalDate, Integer> blockerMinutes = new HashMap<>();
+        for (Map.Entry<LocalDate, List<BlockerItem>> entry : dailyBlockers.entrySet()) {
+            LocalDate day = entry.getKey();
+            List<BlockerItem> items = entry.getValue();
+            
+            List<BlockerItem> fixed = items.stream().filter(i -> !i.isFlexible).collect(Collectors.toList());
+            List<BlockerItem> flexible = items.stream().filter(i -> i.isFlexible).collect(Collectors.toList());
+
+            // Phase 1: Fixed
+            fixed.sort(Comparator.comparing(i -> i.start));
+            List<BlockerItem> placed = new ArrayList<>();
+            LocalTime currentFreeTime = null;
+            for (BlockerItem item : fixed) {
+                LocalTime itemStart = item.start;
+                if (currentFreeTime != null && itemStart.isBefore(currentFreeTime)) {
+                    itemStart = currentFreeTime;
+                }
+                LocalTime itemEnd = itemStart.plusMinutes(item.duration);
+                placed.add(new BlockerItem(itemStart, item.duration, false));
+                currentFreeTime = itemEnd;
+            }
+
+            // Phase 2: Flexible
+            WorkingHourEntry workDay = getWorkingHourEntry(workingHours, day.getDayOfWeek()).get();
+            LocalTime workdayStart = workDay.getStartTime();
+            LocalTime workdayEnd = workDay.getEndTime();
+
+            for (BlockerItem flex : flexible) {
+                LocalTime searchStart = workdayStart;
+                boolean found = false;
+                while (!found && !searchStart.plusMinutes(flex.duration).isAfter(workdayEnd)) {
+                    LocalTime gapEnd = searchStart.plusMinutes(flex.duration);
+                    final LocalTime finalSearchStart = searchStart;
+                    final LocalTime finalGapEnd = gapEnd;
+                    boolean overlaps = placed.stream().anyMatch(p -> {
+                        LocalTime pStart = p.start;
+                        LocalTime pEnd = pStart.plusMinutes(p.duration);
+                        return finalSearchStart.isBefore(pEnd) && finalGapEnd.isAfter(pStart);
+                    });
+                    if (!overlaps) {
+                        placed.add(new BlockerItem(searchStart, flex.duration, true));
+                        placed.sort(Comparator.comparing(i -> i.start));
+                        found = true;
+                    } else {
+                        LocalTime nextPotential = placed.stream()
+                            .filter(p -> p.start.isBefore(finalGapEnd) && p.start.plusMinutes(p.duration).isAfter(finalSearchStart))
+                            .map(p -> p.start.plusMinutes(p.duration))
+                            .max(Comparator.naturalOrder())
+                            .orElse(searchStart.plusMinutes(1));
+                        searchStart = nextPotential;
+                    }
+                }
+                if (!found) {
+                    LocalTime lastEnd = placed.isEmpty() ? workdayStart : placed.stream().map(p -> p.start.plusMinutes(p.duration)).max(Comparator.naturalOrder()).get();
+                    placed.add(new BlockerItem(lastEnd, flex.duration, true));
+                    placed.sort(Comparator.comparing(i -> i.start));
+                }
+            }
+
+            // Gesamtdauer berechnen
+            int totalDailyBlocker = 0;
+            currentFreeTime = null;
+            for (BlockerItem item : placed) {
+                LocalTime itemStart = item.start;
+                if (currentFreeTime != null && itemStart.isBefore(currentFreeTime)) {
+                    itemStart = currentFreeTime;
+                }
+                LocalTime itemEnd = itemStart.plusMinutes(item.duration);
+                int actualDuration = (int) ChronoUnit.MINUTES.between(itemStart, itemEnd);
+                if (actualDuration > 0) {
+                    totalDailyBlocker += actualDuration;
+                    currentFreeTime = itemEnd;
+                }
+            }
+            blockerMinutes.put(day, totalDailyBlocker);
         }
 
         // ══════════════════════════════════════════════════════════
@@ -528,6 +723,20 @@ public class ScheduleService {
         void setRestDurationMinutes(int value) { this.restDurationMinutes = value; }
         int getSlack() { return slack; }
         void setSlack(int value) { this.slack = value; }
+    }
+
+    /**
+     * Helper class for budget calculation.
+     */
+    private static class BlockerItem {
+        LocalTime start;
+        int duration;
+        boolean isFlexible;
+        BlockerItem(LocalTime start, int duration, boolean isFlexible) {
+            this.start = start;
+            this.duration = duration;
+            this.isFlexible = isFlexible;
+        }
     }
 
     /**
